<resources>
    <string name="app_name" translatable="false">TripPlanner</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="language" translatable="false">EN</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="total_amount">Total Amount</string>
    <string name="date">Date</string>
    <string name="split_evenly">Split Evenly</string>
    <string name="set_individually">Set Individually</string>
    <string name="add_transaction">Add Transaction</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>